2018-12-08  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix some issues detected by cppcheck

	* libbalsa/imap/auth-gssapi.c: fix (unlikely) uninitialised use of rc
	* libbalsa/imap/imap-auth.c: do not dereference NULL pointer if
	  an error occurred
	* libbalsa/libbalsa.c: fix signed/unsigned mismatch, and use
	  g_debug instead of printf
	* libbalsa/mailbox_imap.c: fix signed/unsigned mismatch
	* libinit_balsa/assistant_page_directory.c: fix different
	  parameters names in function prototype and implementation
	* src/balsa-message.c, src/save-restore.c: do no dereference
	  pointer before checking it it is not NULL
	* src/sendmsg-window.c: fix false-positive about NULL pointer dereference
	* src/store-address.c: fix false-positive by splitting an
	  over-complex construct

2018-12-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* libbalsa/mime.c (libbalsa_text_to_html):
	pango_unichar_direction() is deprecated in Pango 1.44; a commit
	message suggests using fribidi directly.
	* configure.ac: add direct fribidi dependency; it is already an
	indirect dependency through Pango.
	* meson.build: ditto.

2018-12-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not include no-longer-existing libbalsa/libbalsa-marshal.h

	* src/main-window.c:

2018-11-30  Albrecht Dreß  <albrecht.dress@arcor.de>

	Replace custom ELEMENTS macro with Glib G_N_ELEMENTS

	* libbalsa/filter-funcs.c (libbalsa_condition_new_from_string),
	(append_header_names), (append_flag_names):
	* libbalsa/identity.c (md_sig_path_changed):
	* libbalsa/imap/imap-commands.c (need_fetch), (imap_mbox_status),
	(enum_flag_to_str):
	* libbalsa/imap/imap-handle.c (ir_capability_data),
	(ir_resp_text_code), (ir_list_lsub), (ir_status),
	(ir_msg_att_flags), (ir_fetch_seq), (ir_handle_response):
	* libbalsa/libbalsa.h:
	* libbalsa/mailbox.c (mbox_model_get_value):
	* src/balsa-index.c (bndx_instance_init), (bndx_popup_menu_create):